--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
