--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "concurrently \"vite\" \"node server/index.js\"",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "dev": "vite ",
-    "server": "node server/index.js"
+    "dev": "vite"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -17,7 +16,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.20.1",
+    "react-syntax-highlighter": "^15.6.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
